DEV/src/objects/Compensation__c.object
<CustomObject>
    <fields>
        <fullName>Compnesation_id__c</fullName>
        <displayFormat>CMP{00000}</displayFormat>
        <label>Compnesation id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Effective_date__c</fullName>
        <label>Effective date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pay_frequency__c</fullName>
        <label>Pay frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Bi-Weekly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <label>Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>Hourly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Worker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Worker</label>
        <referenceTo>Worker__c</referenceTo>
        <relationshipLabel>Compensation</relationshipLabel>
        <relationshipName>Compensation</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Compensation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Compension Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Compensation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>